handle top-level generics and single value enums
